--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "storybook-generator",
   "displayName": "Storybook Generator",
-  "description": "Quickly create Storybook's stories for your React components",
-  "version": "1.0.1",
+  "description": "Quickly create Storybook's stories for your Typescript React components",
+  "version": "1.0.2",
   "publisher": "NicolasGodefroy",
   "repository": {
     "type": "git",
@@ -12,6 +12,7 @@
   "bugs": {
     "url": "https://github.com/nicolas-godefroy-dev/storybook-generator/issues"
   },
+  "icon": "storybook.ico",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -27,7 +28,7 @@
     "commands": [
       {
         "command": "storybook-generator.createStory",
-        "title": "Create a Storybook story"
+        "title": "Story: Create a Storybook Story"
       }
     ],
     "menus": {
